Actions
Bug #10745
closedrlmod: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/rlmod.c: In function 'rlmodrmsg': ../../common/io/rlmod.c:891:13: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/io/rlmod.c:947:14: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/io/rlmod.c:981:11: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../../common/io/rlmod.c: In function 'rlwinsetup': ../../common/io/rlmod.c:1057:25: error: comparison between pointer and integer [-Werror] if ((rlwinctl(q, mp1)) == NULL) { ^~ In file included from ../../common/sys/param.h:48:0, from ../../common/io/rlmod.c:42: ../../common/io/rlmod.c: In function 'rlmodwioctl': ../../common/sys/null.h:32:14: error: passing argument 3 of 'miocack' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/rlmod.c:1252:18: note: in expansion of macro 'NULL' miocack(q, mp, NULL, 0); ^~~~ In file included from ../../common/io/rlmod.c:45:0: ../../common/sys/strsun.h:63:13: note: expected 'int' but argument is of type 'void *' extern void miocack(queue_t *, mblk_t *, int, int); ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a8eee26afa7ddf0c604c989c598251014bdc6e6f
commit a8eee26afa7ddf0c604c989c598251014bdc6e6f Author: Toomas Soome <tsoome@me.com> Date: 2019-04-23T19:49:47.000Z 10745 rlmod: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions